--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-slick": "^0.23.13",
+    "@types/react-window": "^1.8.8",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.5",
     "react": "^18.3.1",
