--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-slick": "^0.23.13",
-    "@types/react-window": "^1.8.8",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.5",
     "react": "^18.3.1",
@@ -23,6 +22,7 @@
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-window": "^1.8.10",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
     "slick-carousel": "^1.8.1",
