--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -14,6 +15,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-slick": "^0.23.13",
     "axios": "^1.7.2",
+    "firebase": "^10.12.5",
     "framer-motion": "^11.3.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
